Anpassungen Layout Login

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/book-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuchWeb</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   </head>
   <body>
     <div id="root"></div>
